--- a/src/components/Structure/SideBar/styles.less
+++ b/src/components/Structure/SideBar/styles.less
@@ -1,7 +1,7 @@
 .md_sidebar_cont{
   width: 250px;
   height: 100%;
-  border-right: 0.5px solid #808080;
+  border-right: 0.5px solid rgba(0, 0, 0, 0.07);
   display: flex;
   font-family: sofiapro;
   flex-direction: column;
@@ -32,7 +32,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      margin: 5px;
+      margin: 10px 5px;
       cursor: pointer;
       .icon_back{
         background: #ECEFF7;
