--- a/src/components/Structure/styles.less
+++ b/src/components/Structure/styles.less
@@ -3,8 +3,9 @@
   --text-color-dark:#25396F;
   --text-color-light:#7987A5;
 
-  height: 100vh;
-  width: 100%;
+  height: calc(100vh - 40px);
+  width: 80%;
+  margin: 20px auto;
   display: flex;
   flex-direction: column;
 
