Added All Pages

--- a/src/components/Dashboard/styles.less
+++ b/src/components/Dashboard/styles.less
@@ -3,7 +3,7 @@
   font-family: sofiapro;
 
   .md_db_title{
-    margin: 40px 0 20px;
+    margin: 0px 0 20px;
     font-family: sofiapro;
     font-size: 20px;
     font-weight: 600;
@@ -13,6 +13,9 @@
     width: 100%;
     display: flex;
     justify-content: space-between;
+    .files_cont_horizontal{
+      justify-content: space-between;
+    }
   }
   .md_db_quick_cont{
     overflow: auto;
@@ -24,7 +27,7 @@
     width: 100%;
     display: flex;
     justify-content: center;
-
+    margin-top: 30px;
     .md_db_recent_cont{
       width: 58%;
     }
