--- a/src/components/Structure/SideBar/styles.less
+++ b/src/components/Structure/SideBar/styles.less
@@ -42,6 +42,7 @@
         padding: 10px;
         border-radius: 10px;
         width: 50px;
+        transition: transform ease-in 200ms;
       }
       img{
         height: 25px;
@@ -54,10 +55,20 @@
         font-size: 13px;
       }
     }
-    .md_sb_active_icon,.md_sb_each_icon:hover{
+    .md_sb_active_icon{
       .icon_back{
         background: var(--theme-color);
         box-shadow: 0 10px 20px rgba(88, 92, 229, 0.25);
+      }
+      p{
+        color: var(--text-color-dark);
+        font-weight: 600;
+      }
+    }
+    .md_sb_each_icon:hover{
+      .icon_back{
+        box-shadow: 0 10px 20px rgba(88, 92, 229, 0.25);
+        //transform: scale(1.02);
       }
       p{
         color: var(--text-color-dark);
